--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "token-prices-subgraph",
+  "name": "forge-token-prices",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ erc20-prices",
-    "create-local": "graph create --node http://localhost:8020/ erc20-prices",
-    "remove-local": "graph remove --node http://localhost:8020/ erc20-prices",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 erc20-prices",
+    "deploy": "graph deploy forge-token-prices --version-label v0.0.1 --node https://subgraphs.alchemy.com/api/subgraphs/deploy --deploy-key $DEPLOY_KEY --ipfs https://ipfs.satsuma.xyz",
+    "create-local": "graph create --node http://localhost:8020/ forge-token-prices",
+    "remove-local": "graph remove --node http://localhost:8020/ forge-token-prices",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 forge-token-prices",
     "test": "graph test"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.44.0",
-    "@graphprotocol/graph-ts": "0.29.1"
+    "@graphprotocol/graph-cli": "0.60.0",
+    "@graphprotocol/graph-ts": "0.31.0"
   },
   "devDependencies": { "matchstick-as": "0.5.0" }
 }
